--- a/src/main/java/com/example/mhpl/GUI/mainFrame.form
+++ b/src/main/java/com/example/mhpl/GUI/mainFrame.form
@@ -35,7 +35,10 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="mainPanel">
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+        <Property name="columns" type="int" value="0"/>
+        <Property name="rows" type="int" value="1"/>
+      </Layout>
     </Container>
   </SubComponents>
 </Form>
