--- a/src/main/java/com/example/GUI/thietBiGUI.form
+++ b/src/main/java/com/example/GUI/thietBiGUI.form
@@ -211,7 +211,7 @@
                         </Constraint>
                       </Constraints>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="deviceDesriptionBox">
+                    <Component class="javax.swing.JTextField" name="deviceDescriptionBox">
                       <Properties>
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Sitka Text" size="14" style="0"/>
